# repo-templates

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  RELEASE.md  config.yaml
.github/: dependabot.yml
.github/workflows/: check.yml  sync.yml
.opencode/skills/enroll-repo-in-template/: SKILL.md
.opencode/skills/onboard-new-repo/: SKILL.md
container/: container-rebuild.yaml  container-rebuild.yml  container.yaml  container.yml
copr/: Makefile  Makefile.yaml
dependabot/: dependabot.yaml  dependabot.yml
docs/: _config.yaml  _config.yml  coreos.yaml
fcos/: release-checklist.md  release-checklist.yaml
find-whitespace/: script.sh  script.yaml  workflow.yaml  workflow.yml
gemini/: config.yaml
generic/: release-checklist.md  release-checklist.yaml
go/: release-checklist.md  release-checklist.yaml  signing-ticket.sh  signing-ticket.yaml  tag_release.sh  tag_release.yaml  tests-ignition.yaml  tests-ignition.yml  tests.yaml  tests.yml
owners-file-action/: owners-file-action.yaml  owners-file-action.yml
release-notes/: require-release-note.yaml  require-release-note.yml
rust/: release-checklist.md  release-checklist.yaml  rpm-test.yaml  rpm-test.yml  tests.yaml  tests.yml
shellcheck/: script.yaml  workflow.yaml  workflow.yml
tmpl8/: Cargo.toml
tmpl8/src/: cache.rs  github.rs  main.rs  render.rs  schema.rs
