[package]
name = "tmpl8"
description = "Template renderer for Git repo tooling"
authors = [ "Benjamin Gilbert <bgilbert@redhat.com>" ]
repository = "https://github.com/coreos/repo-templates"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.56.0"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "3.2", default-features = false, features = ["std", "derive"] }
filetime = "0.2"
nix = { version = "0.24", default-features = false, features = ["fs"] }
regex = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
similar = "2"
tera = "1"
yansi = "0.5"
