[package]
name = "tmpl8"
description = "Template renderer for Git repo tooling"
authors = [ "Benjamin Gilbert <bgilbert@redhat.com>" ]
repository = "https://github.com/coreos/repo-templates"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.56.0"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = ["std", "derive", "error-context", "help", "usage"] }
filetime = "0.2"
nix = { version = "0.30", default-features = false, features = ["fs"] }
regex = "1.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
similar = "2"
tera = "1.19.1"
yansi = "1.0"
